--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -315,13 +315,17 @@ nav:
            - Accessing SD Services: data/sensitive-data/sd-access.md
            - Store with SD Connect: data/sensitive-data/sd_connect.md
            - Analyse with SD Desktop: data/sensitive-data/sd_desktop.md
+           - Publish genetic data with Federated EGA: data/sensitive-data/sd_desktop.md
+           - Tutorials: data/sensitive-data/sd_desktop.md
 #          - SD Apply for secondary use: data/sensitive-data/single-register-submission.md
 #          - Federated EGA: data/sensitive-data/federatedega.md
 #          - SD Apply: data/sensitive-data/sd-apply.md
 #          - Containers: data/sensitive-data/creating_containers.md
         - Secondary use of health and social data:
-           - Access data provided by singlle registers: data/sensitive-data/sd_connect.md
+           - Access with a Findat permit: data/sensitive-data/sd_connect.md
+           - Access to data provided by single registers: data/sensitive-data/sd_connect.md
            - SD Desktop for seconday use: data/sensitive-data/sd_connect.md
+           - Instructions for data controllers (registers) : data/sensitive-data/sd_connect.md
         
 
      - Kaivos database service:
