--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,7 @@ extra_css:
   - assets/stylesheets/dropdown.css
   - assets/stylesheets/footer.css
   - assets/stylesheets/header.css
+  - assets/stylesheets/icons.css
   - assets/stylesheets/sidebars.css
   - assets/stylesheets/table.css
   - assets/stylesheets/tags.css
